--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "author": "talis-fb <talisonf11@gmail.com>",
   "license": "MIT",
-  "scripts":{
-      "dev": "nodemon src/index.ts"
+  "scripts": {
+    "dev": "nodemon src/index.ts",
+    "test": "jest",
+    "test-watch": "jest --watch --coverage"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -16,9 +18,12 @@
     "telegraf": "^4.8.3"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.6",
     "@types/node": "^17.0.40",
+    "jest": "^28.1.3",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
